--- a/vercel-test-github/index.html
+++ b/vercel-test-github/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=768, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <h1>Vercel Github Test</h1>
+    <h2>Just one more commit</h2>
 </body>
 </html>
